[gd_scene load_steps=5 format=3 uid="uid://b27whwj2x3vmk"]

[ext_resource type="Script" path="res://scripts/gameover.gd" id="1_838wg"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_nvjgq"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_diuqo"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_pnssy"]

[node name="gameover" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_838wg")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1097.0
offset_bottom = 698.0
color = Color(0.921569, 0.478431, 0.360784, 1)

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 381.0
offset_top = 150.0
offset_right = 758.0
offset_bottom = 230.0
theme_override_font_sizes/font_size = 56
text = "FIM DE JOGO!"

[node name="CenterContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 326.0
offset_top = 415.0
offset_right = 768.0
offset_bottom = 701.0

[node name="reiniciar_nivel" type="Button" parent="CenterContainer" groups=["botoes_gameover"]]
layout_mode = 2
theme_override_colors/font_hover_color = Color(0.960784, 0.74902, 0, 1)
theme_override_font_sizes/font_size = 48
theme_override_styles/focus = SubResource("StyleBoxEmpty_nvjgq")
text = "REINICIAR N√çVEL"
flat = true

[node name="trocar_modalidade" type="Button" parent="CenterContainer" groups=["botoes_gameover"]]
layout_mode = 2
theme_override_colors/font_hover_color = Color(0.960784, 0.74902, 0, 1)
theme_override_font_sizes/font_size = 48
theme_override_styles/focus = SubResource("StyleBoxEmpty_diuqo")
text = "TROCAR MODALIDADE"
flat = true

[node name="reiniciar_jogo" type="Button" parent="CenterContainer" groups=["botoes_gameover"]]
layout_mode = 2
theme_override_colors/font_hover_color = Color(0.960784, 0.74902, 0, 1)
theme_override_font_sizes/font_size = 48
theme_override_styles/focus = SubResource("StyleBoxEmpty_pnssy")
text = "REINICIAR JOGO"
flat = true

[node name="sair" type="Button" parent="CenterContainer" groups=["botoes_gameover"]]
layout_mode = 2
theme_override_colors/font_hover_color = Color(0.960784, 0.74902, 0, 1)
theme_override_font_sizes/font_size = 48
theme_override_styles/focus = SubResource("StyleBoxEmpty_pnssy")
text = "SAIR"
flat = true
